# SVF-example

./: .gitignore  CMakeLists.txt  env.sh
googletest-build/: CTestTestfile.cmake
googletest-build/googlemock/: CTestTestfile.cmake
googletest-build/googletest/: CTestTestfile.cmake
googletest-download/: CMakeLists.txt
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
src/: CMakeLists.txt  SSE.cpp  SSE.h  svf-ex.cpp  test.h
testcase/: compile.sh
testcase/bc/: globalvar.c.ll  globalvar.c.ll.consG.dot  globalvar.c.ll.icfg.dot  globalvarptr.c.ll  globalvarptr.c.ll.consG.dot  globalvarptr.c.ll.icfg.dot  power3A.c.ll  power3A.c.ll.consG.dot  power3A.c.ll.icfg.dot  power3B.c.ll  power3B.c.ll.consG.dot  power3B.c.ll.icfg.dot  t.c.ll  test0.c.ll  test0.c.ll.consG.dot  test0.c.ll.icfg.dot  test0.c.ll.pag.dot  test0_1.c.ll  test0_1.c.ll.consG.dot  test0_1.c.ll.icfg.dot  test0_1.c.ll.pag.dot  test1.c.ll  test1.c.ll.consG.dot  test1.c.ll.icfg.dot  test1.c.ll.pag.dot  test1.c.llcallgraph.dot  test1.c.llicfg.dot  test2.c.ll  test2.c.ll.icfg.dot  test2.c.ll.pag.dot  test3.c.ll  test3.c.ll.icfg.dot  test3.c.ll.pag.dot  test4.c.ll  test4.c.ll.consG.dot  test4.c.ll.icfg.dot  test4.c.ll.pag.dot  test5.c.ll  test5.c.ll.consG.dot  test5.c.ll.icfg.dot  (+5 more)
testcase/src/: globalvar.c  globalvarptr.c  power3A.c  power3B.c  test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  testvalueptr.c
